--- a/mysite/users/templates/users/login.html
+++ b/mysite/users/templates/users/login.html
@@ -11,6 +11,9 @@
                 {{ form|crispy }}
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Login</button>
+            <small class="text-muted ml-2">
+                <a href="{% url 'password_reset' %}">Forgot Passoword?</a>
+            </small>
         </div>
     </form>
     <div class="border-top pt-3">
